--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto+Flex:opsz,wght@8..144,100&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
 body {
-    font-style: Arial;
+    font-style: Roboto, sans-serif;
+    font-weight: 100;
 }
