--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h1, h2 {
     line-height: 2.5em;
 }
 #main-container {
-    background: url(../images/pexels-photo-9736891.jpeg);
+    background: url(../images/main.jpeg);
     background-size: cover;
     background-position: center;
     padding: 40px;
@@ -59,6 +59,22 @@ h1, h2 {
     padding: 40px;
     text-align: center;
     margin-top: 40px;
+}
+#gallery-container {
+    padding: 40px;
+}
+.gallery-content {
+    text-align: center;
+}
+.gallery-images {
+    display: grid;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
+}
+.gallery-image-container img {
+    max-height: 100%;
+    max-width: 100%;
 }
 .social-media-container {
     text-align: center;
