--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Roboto+Flex:opsz,wght@8..144,100&display=swap');
+
+/* Global rules */
 * {
     margin: 0;
     padding: 0;
     border: none;
-}
-a {
-    text-decoration: none;
-    color: inherit;
 }
 body {
     font-family: Roboto, sans-serif;
     font-weight: 100;
     color: #436277;
 }
+a {
+    text-decoration: none;
+    color: inherit;
+}
+h2, h3 {
+    line-height: 2.5em;
+}
+fieldset legend {
+    display: none;
+}
+
+/* Header */
 header {
     margin: 0 40px;
     display: flex;
@@ -22,7 +32,8 @@ header {
     font-size: 2em;
     font-weight: 100;
 }
-/* navigation links */
+
+/* Navigation links */
 #menu {
     display: flex;
     font-size: 1.1em;
@@ -35,7 +46,6 @@ header {
     list-style-type: none;
     margin-right: 30px;
 }
- 
 #menu a:hover{
     border-bottom: 1px solid #774348;
 }
@@ -43,10 +53,7 @@ header {
     border-bottom: 1px solid #774348;
 }
 
-
-h2, h3 {
-    line-height: 2.5em;
-}
+/* Main page */
 #main-container {
     background: url(../images/main.jpeg);
     background-size: cover;
@@ -64,12 +71,25 @@ h2, h3 {
 #timetable > li {
     list-style-type: none;
 }
+
+/* Gallery page */
 #gallery-container {
     padding: 0 40px 40px 40px;
 }
 .gallery-content {
     text-align: center;
 }
+.gallery-images {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
+}
+.gallery-image-container img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+/* About page */
 #about-container {
     background: url(../images/about-us.jpeg);
     background-size: cover;
@@ -91,6 +111,8 @@ h2, h3 {
 .about-content > div {
     margin: 10px;
 }
+
+/* Signup page */
 #signup-container {
     background: url(../images/main.jpeg);
     background-size: cover;
@@ -135,15 +157,8 @@ h2, h3 {
     text-decoration: none;
     font-size: 16px;
 }
-.gallery-images {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 1rem;
-}
-.gallery-image-container img {
-    max-height: 100%;
-    max-width: 100%;
-}
+
+/* Social media links */
 .social-media-container {
     text-align: center;
 }
@@ -157,33 +172,42 @@ h2, h3 {
     list-style-type: none;
     margin: 20px;
 }
-
 #social-media-links li:hover {
     list-style-type: none;
     margin: 20px;
     color: #774348;
 }
 
-fieldset legend {
-    display: none;
-}
-
-
-@media only screen and (max-width: 600px) {    
+/* Responsive adjustments */
+@media only screen and (max-width: 600px) {
+    /* Header */
     header {
         flex-direction: column;
     }
+
+    /* Navigation links */
     #menu {
         font-size: 0.9em;
         white-space: nowrap;
         letter-spacing: 0;
     }
+
+    /* Gallery page */
     .gallery-content > h2 {
         font-size: 1.2em;
     }
     .gallery-images {
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     }
+
+    /* About page */
+    #about-container {
+        padding: 40px;
+        min-height: 60vh;
+        display: block;
+    }
+
+    /* Signup page */
     .signup-content {
         width: inherit;
     }
@@ -193,10 +217,5 @@ fieldset legend {
     .form-input {
         width: 100%;
         margin-top: 10px;
-    }
-    #about-container {
-        padding: 40px;
-        min-height: 60vh;
-        display: block;
     }
 }
